UC19: Binary Search Implementation with test cases