@@ -4,6 +4,44 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class TrainConsistManagementAppTest {
 
+    // ================= COMMON CLASSES =================
+
+    // For UC12 safety tests
+    static class GoodsBogie {
+        String type, cargo;
+        GoodsBogie(String t, String c) { type = t; cargo = c; }
+    }
+
+    // For UC13
+    static class Bogie {
+        int capacity;
+        Bogie(int c) { capacity = c; }
+    }
+
+    // For UC14
+    static class InvalidCapacityException extends Exception {
+        InvalidCapacityException(String msg) { super(msg); }
+    }
+
+    static class PassengerBogie {
+        int capacity;
+        PassengerBogie(int c) throws InvalidCapacityException {
+            if (c <= 0) throw new InvalidCapacityException("Capacity must be greater than zero");
+            capacity = c;
+        }
+    }
+
+    // For UC15
+    static class CargoBogie {
+        String shape, cargo;
+        CargoBogie(String s) { shape = s; }
+
+        void assign(String c) {
+            if (shape.equals("Rectangular") && c.equals("Petroleum")) return;
+            cargo = c;
+        }
+    }
+
     // ================= UC8 =================
     @Test
     void testUC8_FilterValid() {
@@ -15,30 +53,24 @@ class TrainConsistManagementAppTest {
     @Test
     void testUC8_NoMatch() {
         List<Integer> input = Arrays.asList(10, 20, 30);
-        List<Integer> result = input.stream().filter(x -> x > 60).toList();
-        assertTrue(result.isEmpty());
+        assertTrue(input.stream().filter(x -> x > 60).toList().isEmpty());
     }
 
     @Test
     void testUC8_AllMatch() {
         List<Integer> input = Arrays.asList(70, 80, 90);
-        List<Integer> result = input.stream().filter(x -> x > 60).toList();
-        assertEquals(input, result);
+        assertEquals(input, input.stream().filter(x -> x > 60).toList());
     }
 
     // ================= UC10 =================
     @Test
     void testUC10_TotalSeats() {
-        List<Integer> input = Arrays.asList(72, 56, 24, 90);
-        int total = input.stream().reduce(0, Integer::sum);
-        assertEquals(242, total);
+        assertEquals(242, Arrays.asList(72,56,24,90).stream().reduce(0, Integer::sum));
     }
 
     @Test
     void testUC10_EmptyList() {
-        List<Integer> input = new ArrayList<>();
-        int total = input.stream().reduce(0, Integer::sum);
-        assertEquals(0, total);
+        assertEquals(0, new ArrayList<Integer>().stream().reduce(0, Integer::sum));
     }
 
     // ================= UC11 =================
@@ -63,127 +95,47 @@ class TrainConsistManagementAppTest {
     }
 
     // ================= UC12 =================
-    static class GoodsBogieUC12 {
-        String type, cargo;
-        GoodsBogieUC12(String t, String c) { type = t; cargo = c; }
-    }
-
     @Test
     void testUC12_AllValid() {
-        List<GoodsBogieUC12> list = Arrays.asList(
-                new GoodsBogieUC12("Cylindrical", "Petroleum"),
-                new GoodsBogieUC12("Rectangular", "Coal")
+        List<GoodsBogie> list = Arrays.asList(
+                new GoodsBogie("Cylindrical", "Petroleum"),
+                new GoodsBogie("Rectangular", "Coal")
         );
-        boolean result = list.stream().allMatch(b ->
-                !b.type.equals("Cylindrical") || b.cargo.equals("Petroleum"));
+
+        boolean result = list.stream()
+                .allMatch(b -> !b.type.equals("Cylindrical") || b.cargo.equals("Petroleum"));
+
         assertTrue(result);
     }
 
     @Test
     void testUC12_InvalidCase() {
-        List<GoodsBogieUC12> list = List.of(
-                new GoodsBogieUC12("Cylindrical", "Coal"));
-        boolean result = list.stream().allMatch(b ->
-                !b.type.equals("Cylindrical") || b.cargo.equals("Petroleum"));
-        assertFalse(result);
-    }
-
-<<<<<<< HEAD
-=======
-    @Test
-    void testSafety_NonCylindricalAllowed() {
-
-        List<GoodsBogie> list = Arrays.asList(
-                new GoodsBogie("Rectangular", "Coal"),
-                new GoodsBogie("Open", "Grain")
+        List<GoodsBogie> list = List.of(
+                new GoodsBogie("Cylindrical", "Coal")
         );
 
         boolean result = list.stream()
-                .allMatch(b ->
-                        !b.type.equals("Cylindrical") ||
-                                b.cargo.equals("Petroleum")
-                );
-
-        assertTrue(result);
-    }
-
-    @Test
-    void testSafety_MixedWithViolation() {
-
-        List<GoodsBogie> list = Arrays.asList(
-                new GoodsBogie("Cylindrical", "Petroleum"),
-                new GoodsBogie("Cylindrical", "Coal") // invalid
-        );
-
-        boolean result = list.stream()
-                .allMatch(b ->
-                        !b.type.equals("Cylindrical") ||
-                                b.cargo.equals("Petroleum")
-                );
+                .allMatch(b -> !b.type.equals("Cylindrical") || b.cargo.equals("Petroleum"));
 
         assertFalse(result);
     }
 
-    @Test
-    void testSafety_EmptyList() {
-
-        List<GoodsBogie> list = new ArrayList<>();
-
-        boolean result = list.stream()
-                .allMatch(b ->
-                        !b.type.equals("Cylindrical") ||
-                                b.cargo.equals("Petroleum")
-                );
-
-        assertTrue(result); // empty = safe
-    }
-
-
- develop
->>>>>>> cfe9f40d2bb360f7c0f580360fe5cdf4237da333
     // ================= UC13 =================
-    static class BogieUC13 {
-        int capacity;
-        BogieUC13(int c) { capacity = c; }
-    }
-
     @Test
     void testUC13_FilterLogic() {
-        List<BogieUC13> list = Arrays.asList(
-                new BogieUC13(50), new BogieUC13(70), new BogieUC13(90));
-        long count = list.stream().filter(b -> b.capacity > 60).count();
-        assertEquals(2, count);
+        List<Bogie> list = Arrays.asList(
+                new Bogie(50), new Bogie(70), new Bogie(90)
+        );
+        assertEquals(2, list.stream().filter(b -> b.capacity > 60).count());
     }
 
     // ================= UC14 =================
-    static class InvalidCapacityException extends Exception {
-        InvalidCapacityException(String msg) { super(msg); }
-    }
-
-    static class PassengerBogie {
-        int capacity;
-        PassengerBogie(int c) throws InvalidCapacityException {
-            if (c <= 0) throw new InvalidCapacityException("Capacity must be greater than zero");
-            capacity = c;
-        }
-    }
-
     @Test
     void testUC14_Exception() {
         assertThrows(InvalidCapacityException.class, () -> new PassengerBogie(0));
     }
 
     // ================= UC15 =================
-    static class CargoBogie {
-        String shape, cargo;
-        CargoBogie(String s) { shape = s; }
-
-        void assign(String c) {
-            if (shape.equals("Rectangular") && c.equals("Petroleum")) return;
-            cargo = c;
-        }
-    }
-
     @Test
     void testUC15_Safe() {
         CargoBogie g = new CargoBogie("Cylindrical");
@@ -215,12 +167,6 @@ class TrainConsistManagementAppTest {
                 bubbleSort(new int[]{72,56,24,70,60}));
     }
 
-    @Test
-    void testUC16_AlreadySorted() {
-        assertArrayEquals(new int[]{24,56,60,70,72},
-                bubbleSort(new int[]{24,56,60,70,72}));
-    }
-
     // ================= UC17 =================
     @Test
     void testUC17_Sorting() {
@@ -230,23 +176,48 @@ class TrainConsistManagementAppTest {
     }
 
     // ================= UC18 =================
-    boolean search(String[] arr, String key) {
+    boolean linearSearch(String[] arr, String key) {
         for (String s : arr) if (s.equals(key)) return true;
         return false;
     }
 
-<<<<<<< HEAD
     @Test
     void testUC18_Found() {
-        assertTrue(search(new String[]{"BG101","BG309"}, "BG309"));
+        assertTrue(linearSearch(new String[]{"BG101","BG309"}, "BG309"));
     }
-=======
-main
-
->>>>>>> cfe9f40d2bb360f7c0f580360fe5cdf4237da333
 
     @Test
     void testUC18_NotFound() {
-        assertFalse(search(new String[]{"BG101","BG309"}, "BG999"));
+        assertFalse(linearSearch(new String[]{"BG101","BG309"}, "BG999"));
+    }
+
+    // ================= UC19 =================
+    boolean binarySearch(String[] arr, String key) {
+        Arrays.sort(arr);
+        int low = 0, high = arr.length - 1;
+
+        while (low <= high) {
+            int mid = (low + high) / 2;
+            int cmp = key.compareTo(arr[mid]);
+
+            if (cmp == 0) return true;
+            else if (cmp < 0) high = mid - 1;
+            else low = mid + 1;
+        }
+        return false;
+    }
+
+    @Test
+    void testUC19_BogieFound() {
+        assertTrue(binarySearch(
+                new String[]{"BG101","BG205","BG309","BG412","BG550"},
+                "BG309"));
+    }
+
+    @Test
+    void testUC19_BogieNotFound() {
+        assertFalse(binarySearch(
+                new String[]{"BG101","BG205","BG309","BG412","BG550"},
+                "BG999"));
     }
 }
